<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_shopping_cart_24"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_my_orders_24"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_24"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_24"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_24"
            android:title="@string/about_us" />
    </group>
</menu>