<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sharma.pankaj.grocerystore.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_product_category"
            app:destination="@id/nav_product_category" />
        <action
            android:id="@+id/action_nav_home_to_nav_product_decription"
            app:destination="@id/nav_product_decription" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_cart"
        android:name="sharma.pankaj.grocerystore.ui.mycart.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" >
        <action
            android:id="@+id/action_nav_my_cart_to_nav_product_decription"
            app:destination="@id/nav_product_decription" />
        <action
            android:id="@+id/action_nav_my_cart_to_nav_order_review"
            app:destination="@id/nav_order_review" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="sharma.pankaj.grocerystore.ui.myorders.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="sharma.pankaj.grocerystore.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="sharma.pankaj.grocerystore.ui.chat.ChatFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="sharma.pankaj.grocerystore.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_about"
        android:name="sharma.pankaj.grocerystore.ui.about.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_product_decription"
        android:name="sharma.pankaj.grocerystore.ui.product.ProductDescriptionFragment"
        android:label="Description"
        tools:layout="@layout/fragment_product_description" />

    <fragment
        android:id="@+id/nav_order_review"
        android:name="sharma.pankaj.grocerystore.ui.mycart.OrderReviewFragment"
        android:label="Order Review"
        tools:layout="@layout/fragment_order_review" />

    <fragment
        android:id="@+id/nav_product_category"
        android:name="sharma.pankaj.grocerystore.ui.product.ProductCategoryFragment"
        android:label="Order Review"
        tools:layout="@layout/fragment_product_category" />

</navigation>