<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    android:background="@color/colorWhite"
    app:behavior_peekHeight="56dp"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.address.AddressFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_flat_number"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/house_no"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/edittext_selectable_bg"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landmark"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/landmark"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/edittext_selectable_bg"/>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/area"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/edittext_selectable_bg"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pincode"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/pincode"
            android:layout_marginTop="4dp"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/edittext_selectable_bg"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/district"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/edittext_selectable_bg"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/state"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/edittext_selectable_bg"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:id="@+id/login_mb"
            android:text="@string/add_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:cornerRadius="4dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>