<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screenPadding">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_nback"
            android:textColor="@color/colorGreenDark"
            android:id="@+id/title"
            android:textSize="35sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:text="@string/please_login_to_continue"
            android:textSize="16sp"
            android:textColor="@color/colorGray"
            android:id="@+id/subtitle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtitle"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/colorGray" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/email_et"
                android:layout_marginTop="4dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:background="@drawable/edittext_selectable_bg"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorGray" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/password_et"
                android:layout_marginTop="4dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:drawableEnd="@drawable/ic_password_visible"
                android:background="@drawable/edittext_selectable_bg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Remember me"
                    android:id="@+id/remember_me_mcb"
                    android:textColor="@color/colorGray"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_weight="1"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:id="@+id/forgot_password_mtv"
                    android:gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/colorGray" />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textSize="16sp"
            android:id="@+id/register_mtv"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            android:background="?attr/selectableItemBackground"
            android:layout_above="@id/login_mb"
            android:textColor="@color/colorGray" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:id="@+id/login_mb"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:cornerRadius="4dp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>