<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/coupon_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="45dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/coupon_code"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/apply"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="APPLY"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorGreenDark"
            android:id="@+id/apply"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="23sp"
        android:textColor="@color/colorGreenDark"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="@string/cart_summary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_item"
            android:textSize="16sp"
            android:text="Total (10 items)"
            android:gravity="start"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorGreenDark"
            android:id="@+id/item_price"
            android:text="Rs 210.89"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/discount"
            android:textSize="16sp"
            android:text="@string/discount"
            android:gravity="start"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/discount_price"
            android:text="Rs 10.45"
            android:textColor="@color/colorGreenDark"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delivery"
            android:textSize="16sp"
            android:text="@string/delivery_charge"
            android:gravity="start"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/delivery_price"
            android:textColor="@color/colorGreenDark"
            android:text="Rs 10.45"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subtotal"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/colorGreenDark"
            android:text="@string/subtotal"
            android:gravity="start"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreenDark"
            android:id="@+id/total_price"
            android:text="Rs 10.45"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:id="@+id/order_mb"
        android:layout_marginTop="20dp"
        android:text="@string/order_now"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:cornerRadius="4dp"/>
</LinearLayout>
